css/style.css
 * {
    box-sizing: border-box;
}
label[for] {
    display: none;
}
input.correct {
    border: 2px solid green !important;
}
input.incorrect {
    border: 2px solid red !important;
}
label.correct {
    display: inline;
    color: green;
}
label.incorrect {
    display: inline;
    color: red;
}
#content {
    position: absolute;
    top: 2.75em;
    left: 0;
    right: 0;
    bottom: 1.5em;
}

